--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+         <groupId>cypherCodebreaker</groupId>
+         <artifactId>cypherCodebreaker</artifactId>
+         <scope>system</scope>
+         <version>1.0</version>
+         <systemPath>${basedir}\src\lib\cyphersCodebreaker2.jar</systemPath>
+      </dependency>
 	</dependencies>
 
 	<build>
